almost done with character sheet
