# backend/docs/swagger.yaml
@@ -1,7 +1,5 @@
 basePath: /
 definitions:
-  big.Int:
-    type: object
   github_com_cscercel_behold-dnd_internal_db.Character:
     properties:
       alignment:
@@ -248,8 +246,10 @@ definitions:
         type: integer
       requires_attunement:
         type: boolean
+      value:
+        type: integer
       weight:
-        $ref: '#/definitions/pgtype.Numeric'
+        type: integer
     type: object
   github_com_cscercel_behold-dnd_internal_db.CreateSpellParams:
     properties:
@@ -294,8 +294,10 @@ definitions:
         type: integer
       requires_attunement:
         type: boolean
+      value:
+        type: integer
       weight:
-        $ref: '#/definitions/pgtype.Numeric'
+        type: integer
     type: object
   github_com_cscercel_behold-dnd_internal_db.Spell:
     properties:
@@ -340,123 +342,123 @@ definitions:
   github_com_cscercel_behold-dnd_internal_db.UpdateCharacterParams:
     properties:
       alignment:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       armor_class:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       attunement_slots:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       background:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       bonds:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       charisma:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       class:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       conditions:
         items:
           type: string
         type: array
       constitution:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       copper:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       dexterity:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       electrum:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       flaws:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       gold:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       hit_dice_remaining:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       hit_dice_type:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       id:
         type: string
       ideals:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       immunities:
         items:
           type: string
         type: array
       inspiration:
-        $ref: '#/definitions/pgtype.Bool'
+        type: boolean
       intelligence:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       level:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       max_hp:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       name:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       notes:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       personality_traits:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       platinum:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       race:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       resistances:
         items:
           type: string
         type: array
       save_prof_charisma:
-        $ref: '#/definitions/pgtype.Bool'
+        type: boolean
       save_prof_constitution:
-        $ref: '#/definitions/pgtype.Bool'
+        type: boolean
       save_prof_dexterity:
-        $ref: '#/definitions/pgtype.Bool'
+        type: boolean
       save_prof_intelligence:
-        $ref: '#/definitions/pgtype.Bool'
+        type: boolean
       save_prof_strength:
-        $ref: '#/definitions/pgtype.Bool'
+        type: boolean
       save_prof_wisdom:
-        $ref: '#/definitions/pgtype.Bool'
+        type: boolean
       silver:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_acrobatics:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_animal_handling:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_arcana:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_athletics:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_deception:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_history:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_insight:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_intimidation:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_investigation:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_medicine:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_nature:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_perception:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_performance:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_persuasion:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_religion:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_sleight_of_hand:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_stealth:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       skill_survival:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       speed:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       strength:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       training_armor:
         items:
           type: string
@@ -478,51 +480,53 @@ definitions:
           type: string
         type: array
       wisdom:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       xp:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
     type: object
   github_com_cscercel_behold-dnd_internal_db.UpdateInventoryItemParams:
     properties:
       description:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       id:
         type: string
       is_attuned:
-        $ref: '#/definitions/pgtype.Bool'
+        type: boolean
       is_equipped:
-        $ref: '#/definitions/pgtype.Bool'
+        type: boolean
       name:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       quantity:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       requires_attunement:
-        $ref: '#/definitions/pgtype.Bool'
+        type: boolean
+      value:
+        type: integer
       weight:
-        $ref: '#/definitions/pgtype.Numeric'
+        type: integer
     type: object
   github_com_cscercel_behold-dnd_internal_db.UpdateSpellParams:
     properties:
       casting_time:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       components:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       description:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       duration:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       id:
         type: string
       is_prepared:
-        $ref: '#/definitions/pgtype.Bool'
+        type: boolean
       level:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
       name:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       range:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
       school:
-        $ref: '#/definitions/pgtype.Text'
+        type: string
     type: object
   github_com_cscercel_behold-dnd_internal_db.UpsertSpellSlotParams:
     properties:
@@ -535,13 +539,6 @@ definitions:
       used:
         type: integer
     type: object
-  pgtype.Bool:
-    properties:
-      bool:
-        type: boolean
-      valid:
-        type: boolean
-    type: object
   pgtype.InfinityModifier:
     enum:
     - 1
@@ -553,35 +550,6 @@ definitions:
     - Infinity
     - Finite
     - NegativeInfinity
-  pgtype.Int4:
-    properties:
-      int32:
-        format: int32
-        type: integer
-      valid:
-        type: boolean
-    type: object
-  pgtype.Numeric:
-    properties:
-      exp:
-        format: int32
-        type: integer
-      infinityModifier:
-        $ref: '#/definitions/pgtype.InfinityModifier'
-      int:
-        $ref: '#/definitions/big.Int'
-      naN:
-        type: boolean
-      valid:
-        type: boolean
-    type: object
-  pgtype.Text:
-    properties:
-      string:
-        type: string
-      valid:
-        type: boolean
-    type: object
   pgtype.Timestamptz:
     properties:
       infinityModifier:
@@ -884,7 +852,6 @@ paths:
       - description: Character data
         in: body
         name: body
-        required: true
         schema:
           $ref: '#/definitions/github_com_cscercel_behold-dnd_internal_db.UpdateCharacterParams'
       produces:
@@ -1373,7 +1340,6 @@ paths:
       - description: Item data
         in: body
         name: body
-        required: true
         schema:
           $ref: '#/definitions/github_com_cscercel_behold-dnd_internal_db.UpdateInventoryItemParams'
       produces:
@@ -1962,7 +1928,6 @@ paths:
       - description: Spell data
         in: body
         name: body
-        required: true
         schema:
           $ref: '#/definitions/github_com_cscercel_behold-dnd_internal_db.UpdateSpellParams'
       produces:
@@ -2122,6 +2087,80 @@ paths:
       security:
       - BearerAuth: []
       summary: Add temporary HP to a character
+      tags:
+      - characters
+  /characters/npcs:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_cscercel_behold-dnd_internal_db.Character'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            properties:
+              error:
+                type: string
+            type: object
+        "403":
+          description: Forbidden
+          schema:
+            properties:
+              error:
+                type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            properties:
+              error:
+                type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: List all NPCs (DM only)
+      tags:
+      - characters
+  /characters/players:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_cscercel_behold-dnd_internal_db.Character'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            properties:
+              error:
+                type: string
+            type: object
+        "403":
+          description: Forbidden
+          schema:
+            properties:
+              error:
+                type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            properties:
+              error:
+                type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: List all player characters (DM only)
       tags:
       - characters
   /combat:
